# anki-addon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  bundle_dependencies.sh  collection_profile.txt  config.json  count_notes.py  edit_note.py  format_notes.py  hello.py  hola.py  import_profile.txt  makefile  pyproject.toml  review_counter.py  utils.py
.github/workflows/: ci.yaml  run-static-checks.yaml  run-tests.yaml
.test-baselines/: test.json  test_slow.json
docs/: CONTRIBUTING.md  PLAN.md  TODO.md  architecture.md  tutorial.md
nbs/: 001_completion_vs_chatcompletion.ipynb  002_prompt_engineering.ipynb  003_find_duplicate_notes.ipynb  004_curate_cluster.ipynb  find_duplicate_notes.ipynb  prompt-engineering.ipynb  prompt_engineering.ipynb
nbs/.ipynb_checkpoints/: find_duplicate_notes-checkpoint.ipynb
scripts/: gate_test_time.py
src/addon/: __init__.py  edit_note.py  editor.py  format_notes.py  llm.py  note_counter.py  note_formatter.py  standalone_editor.py  utils.py
src/addon/application/: note_counter.py  note_formatter.py  protocols.py
src/addon/application/services/: ai_completion_service.py  ai_service.py  completion_service.py  curator_agent.py  curator_tools.py  formatter_service.py  prompt_curator.md  prompt_format_note.md
src/addon/application/use_cases/: duplicate_detector.py  note_counter.py  note_duplicate_finder.py  note_formatter.py
src/addon/domain/: editor.py
src/addon/domain/entities/: editor.py  note.py  proposals.py
src/addon/domain/models/: completion_result.py  document_repository.py  editor.py
src/addon/domain/repositories/: document_repository.py  note_repository.py
src/addon/domain/value_objects/: completion_result.py
src/addon/infrastructure/: aqt.py  openai.py  protocols.py  qdrant.py  qdrant_repository.py
tests/: conftest.py  test_editor_dialog.py  test_llm.py  type_checks.py
tests/e2e/: test_format_note_using_real_llm.py  test_format_note_workflow.py
tests/fakes/: aqt_fakes.py  domain_fakes.py  note_fakes.py  openai_fakes.py  qdrant_fakes.py
tests/integration/: conftest.py  test_format_note_using_real_llm.py  test_llm_connections.py  test_openai_compatible_inference_adapter.py  test_qdrant_integration.py  test_qdrant_real.py
tests/unit/: test_addon_config.py  test_ai_completion_service.py  test_anki_note_repository.py  test_completion_service.py  test_curator_agent.py  test_curator_tools.py  test_editor.py  test_entities.py  test_find_duplicates.py  test_format_notes.py  test_import_style.py  test_llm.py  test_openai.py  test_qdrant.py  test_qdrant_repository.py  test_training_dataset.py  test_use_case_duplicate_detector.py
(+8 files in other folders)
