[project]
name = "addon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aqt>=24.11",
    "pyqt6>=6.8.1",
    "pyqt6-webengine>=6.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
