[project]
name = "addon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aqt>=24.11",
    "pydantic>=2.11.4",
    "pyqt6>=6.8.1",
    "pyqt6-webengine>=6.8.0",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
    "ipdb>=0.13.13",
    "pyrefly>=0.16.2",
    "pre-commit>=4.2.0",
    "ty>=0.0.1a7",
]

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
lint.extend-ignore = ["E741"]
line-length = 79
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "vendor",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".*",
    "build",
    "dist",
    "vendor",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pyrefly]
project_includes = ["./src/"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
